# kookmin-feed-discord-bot

./: .cursorignore  .env.example  .gitignore  Dockerfile  README.md  channel_config.json  crawler_config.json  crawler_manager.py  db_config.py  discord_bot.py  main.py  notice_entry.py  notice_type_map.py  pyproject.toml  requirements.txt  restart.sh  rss_feed_checker.py  supervisord.conf  sw_notice_checker.py  update.sh
config/: db_config.py  env_loader.py  logger_config.py
discord_bot/: crawler_manager.py  crawler_type.py  discord_bot.py  scraper_config.py  scrapper_config.py  scrapper_manager.py
template/: notice_data.py  scraper_category.py  scraper_type.py  scraper_type_list.py  scrapper_type.py
utils/: check_new_scraper.py  check_new_scrapper.py  data_server_conect.py  discord_data_api.py  enum_data_api.py  notice_cache.py  rss_notice_scrapper.py  scraper_category.py  scraper_data_api.py  scraper_factory.py  scraper_type.py  scrapper_category.py  scrapper_factory.py  scrapper_type.py  web_scraper.py  web_scrapper.py
web_scraper/: architecture_academic_scraper.py  arts_academic_scraper.py  automativeengineering_academic_scraper.py  coss_academic_scraper.py  creativeengineering_advancedmaterials_academic_scraper.py  creativeengineering_civil_academic_scraper.py  creativeengineering_mechanical_academic_scraper.py  design_automotive_academic_scraper.py  design_ceramics_academic_scraper.py  design_industrial_academic_scraper.py  design_metalwork_academic_scraper.py  design_visual_academic_scraper.py  futuremobility_academic_scraper.py  law_academic_scraper.py  (+20 more)
(+37 files in other folders)
